--- a/example/pom.xml
+++ b/example/pom.xml
@@ -6,10 +6,12 @@
 
     <groupId>com.onsisall.springwebextend</groupId>
     <artifactId>example-all</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <description>example all</description>
     <modules>
         <module>auto-sign-starter-example</module>
+        <module>common-core-example</module>
     </modules>
 
 </project>
