--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>com.onsisall</groupId>
     <artifactId>spring-web-extend</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <description>扩展spring-web</description>
 
@@ -14,6 +15,7 @@
         <module>common-core</module>
         <module>example</module>
         <module>auto-sign-spring-boot-starter</module>
+        <module>mongodb</module>
     </modules>
 
 </project>
