--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.onsisall</groupId>
-    <artifactId>spring-web-extend</artifactId>
+    <artifactId>springwebextend</artifactId>
     <version>1.0-SNAPSHOT</version>
     <description>扩展spring-web</description>
+    <packaging>pom</packaging>
 
     <modules>
         <module>common-pom</module>
